fixed the latest press and press list gap

--- a/assets/styles/press-release.css
+++ b/assets/styles/press-release.css
@@ -79,6 +79,9 @@
 
 @media screen and (min-width: 1024px) {
   .pg__press-latest {
+    margin-bottom: 4rem;
+  }
+  .pg__press-latest {
     display: flex;
     gap: 2rem;
   }
